--- a/css/index.css
+++ b/css/index.css
@@ -64,8 +64,8 @@ color: #555;
 /* index page footer img logo */
 .partner {
     margin-top:50px;
-padding-top: 33px;
-height: 83px;
+padding-top: 35px;
+height: 240px;
 background: #d0e0e3;
 text-align: center;
 }
@@ -77,8 +77,93 @@ padding-left: 0;
 display: inline-block;
 }
 
-footer-info {
-height: 226px;
-background: #424242;
+.footer>.footer-info {
+height: 250px;
+background: #4D4D4D;
 padding-top: 24px;
 }
+
+
+.footer-info-widget {
+width: 235px;
+float: left;
+text-align: center;
+}
+
+
+.footer-info-widget-container {
+display: inline-block;
+text-align: left;
+}
+
+.footer-info-widget h3 {
+    padding:0; 
+    margin:0;
+margin-bottom: 32px;
+color: #c8c8c8;
+font-size: 14px;
+}
+
+.footer-info-widget ul {
+line-height: 30px;
+font-size: 12px;
+max-width: 190px;
+color: #8f8f8f;
+}
+
+    .footer-info-widget ul li {
+    padding-left:0px;
+    }
+.footer-info-widget a {
+color: #8f8f8f;
+}
+.footer>.footer-info>.wrapper>.footer-info-widget>.footer-info-widget-container > .btn {
+display: inline-block;
+padding: 2px 0;
+width: 80px;
+margin-bottom: 0;
+font-size: 14px;
+font-weight: 400;
+line-height: 22px;
+text-align: center;
+white-space: nowrap;
+cursor: pointer;
+background-image: none;
+}
+.footer>.footer-info>.wrapper>.footer-info-widget>.footer-info-widget-container > .btn-other {
+font-size: 12px;
+font-weight: 700;
+background: #2f2f2f;
+color: #fff;
+}
+
+.footer>.footer-info>.wrapper>.footer-info-widget>.footer-info-widget-container > .btn-other:hover{background:#242424;color:#02a3c6!important}
+.footer>.footer-info>.wrapper>.footer-info-widget>.footer-info-widget-container > .btn-other:active{background:#242424}
+
+.footer-info-widget-follow i {
+margin-right: 9px;
+}
+.list-inline {
+padding-left: 0;
+list-style: none;
+}
+.upicon-weibo {
+display: inline-block;
+width: 20px;
+height: 20px;
+background: url(../img/index/weibo.png);
+background-position: 0 0;
+}
+
+.footer-copy {
+height: 60px;
+background: #F5F5F5;
+color: #5b5b5b;
+font-size: 12px;
+text-align:center;
+}
+ 
+
+    .footer>.footer-copy > .media {
+     padding:25px 0 0 0;
+    }
