--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ padding-top:3px;margin-right:5px;
 /* Padding below the footer and lighter body text */
 
 body {
-  padding-bottom: 40px;
+  /* padding-bottom: 40px; */
   color: #5a5a5a;
 }
 
