--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,20 @@
-﻿body,button,input,select,textarea{font-family:"Microsoft Yahei","Hiragino Sans GB","Helvetica Neue",Arial,sans-serif !important;}
- 
+﻿body, button, input, select, textarea {
+    font-family: "Microsoft Yahei","Hiragino Sans GB","Helvetica Neue",Arial,sans-serif !important;
+}
+
 
 /********************************************** navbar-static-top.css **************************************/
 .navbar-static-top {
-  margin-bottom:0px;
+    margin-bottom: 0px;
 }
+
 .navbar-brand-logo {
-padding:5px 20px 0 0; 
+    padding: 5px 20px 0 0;
 }
-#navbar>.navbar-form-input {
-padding-top:3px;margin-right:5px;
+
+#navbar > .navbar-form-input {
+    padding-top: 3px;
+    margin-right: 5px;
 }
 /********************************************** end navbar-static-top.css **************************************/
 
@@ -19,43 +24,48 @@ padding-top:3px;margin-right:5px;
 /* Padding below the footer and lighter body text */
 
 body {
-  /* padding-bottom: 40px; */
-  color: #5a5a5a;
+    /* padding-bottom: 40px; */
+    color: #5a5a5a;
 }
 
 .mtmb15 {
-margin:15px 0;
+    margin: 15px 0;
 }
+
 .mt5mb15 {
-margin:5px 0 15px 0;
+    margin: 5px 0 15px 0;
 }
-div.mp0,p.mp0,h3.mp0 {
-margin:0px; padding:0px;
+
+div.mp0, p.mp0, h3.mp0 {
+    margin: 0px;
+    padding: 0px;
 }
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
 
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
 .navbar-wrapper {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 20;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 20;
 }
 
-/* Flip around the padding for proper display in narrow viewports */
-.navbar-wrapper > .container {
-  padding-right: 0;
-  padding-left: 0;
-}
-.navbar-wrapper .navbar {
-  padding-right: 15px;
-  padding-left: 15px;
-}
-.navbar-wrapper .navbar .container {
-  width: auto;
-}
+    /* Flip around the padding for proper display in narrow viewports */
+    .navbar-wrapper > .container {
+        padding-right: 0;
+        padding-left: 0;
+    }
+
+    .navbar-wrapper .navbar {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+        .navbar-wrapper .navbar .container {
+            width: auto;
+        }
 
 
 /* CUSTOMIZE THE CAROUSEL
@@ -63,25 +73,26 @@ margin:0px; padding:0px;
 
 /* Carousel base class */
 .carousel {
-  height: 420px;
-  /*margin-bottom: 60px; */
+    height: 420px;
+    /*margin-bottom: 60px; */
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
-  z-index: 10;
+    z-index: 10;
 }
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 420px;
-  background-color: #777;
+    height: 420px;
+    background-color: #777;
 }
+
 .carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 420px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 420px;
 }
 
 
@@ -91,15 +102,17 @@ margin:0px; padding:0px;
 
 /* Center align the text within the three columns below the carousel */
 .marketing .col-lg-4 {
-  margin-bottom: 20px;
-  text-align: center;
+    margin-bottom: 20px;
+    text-align: center;
 }
+
 .marketing h2 {
-  font-weight: normal;
+    font-weight: normal;
 }
+
 .marketing .col-lg-4 p {
-  margin-right: 10px;
-  margin-left: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
 
@@ -107,14 +120,14 @@ margin:0px; padding:0px;
 ------------------------- */
 
 .featurette-divider {
-  margin: 80px 0; /* Space out the Bootstrap <hr> more */
+    margin: 80px 0; /* Space out the Bootstrap <hr> more */
 }
 
 /* Thin out the marketing headings */
 .featurette-heading {
-  font-weight: 300;
-  line-height: 1;
-  letter-spacing: -1px;
+    font-weight: 300;
+    line-height: 1;
+    letter-spacing: -1px;
 }
 
 
@@ -123,41 +136,70 @@ margin:0px; padding:0px;
 -------------------------------------------------- */
 
 @media (min-width: 768px) {
-  /* Navbar positioning foo */
-  .navbar-wrapper {
-    margin-top: 20px;
-  }
-  .navbar-wrapper .container {
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-  .navbar-wrapper .navbar {
-    padding-right: 0;
-    padding-left: 0;
-  }
+    /* Navbar positioning foo */
+    .navbar-wrapper {
+        margin-top: 20px;
+    }
 
-  /* The navbar becomes detached from the top, so we round the corners */
-  .navbar-wrapper .navbar {
-    border-radius: 4px;
-  }
+        .navbar-wrapper .container {
+            padding-right: 15px;
+            padding-left: 15px;
+        }
 
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 20px;
-    font-size: 21px;
-    line-height: 1.4;
-  }
+        .navbar-wrapper .navbar {
+            padding-right: 0;
+            padding-left: 0;
+        }
 
-  .featurette-heading {
-    font-size: 50px;
-  }
+        /* The navbar becomes detached from the top, so we round the corners */
+        .navbar-wrapper .navbar {
+            border-radius: 4px;
+        }
+
+    /* Bump up size of carousel content */
+    .carousel-caption p {
+        margin-bottom: 20px;
+        font-size: 21px;
+        line-height: 1.4;
+    }
+
+    .featurette-heading {
+        font-size: 50px;
+    }
 }
 
 @media (min-width: 992px) {
-  .featurette-heading {
-    margin-top: 120px;
-  }
+    .featurette-heading {
+        margin-top: 120px;
+    }
 }
 /**********************************************end carousel **************************************/
 
+/* ------------------------------  scrollUp ---------------------------------- */
 
+#scrollUp {
+    background-color: #777;
+    color: #eee;
+    font-size: 20px;
+    line-height: 46px;
+    text-align: center;
+    text-decoration: none;
+    bottom: 20px;
+    right: 20px;
+    overflow: hidden;
+    width: 46px;
+    height: 46px;
+    border: none;
+    padding-left:2px;
+    opacity: .8;
+}
+
+    #scrollUp:hover {
+        background-color: #333;
+    }
+
+@media screen and (min-width:992px) {
+    #scrollUp {
+        bottom: 100px;
+    }
+}
