--- a/css/main.css
+++ b/css/main.css
@@ -203,3 +203,14 @@ div.mp0, p.mp0, h3.mp0 {
         bottom: 100px;
     }
 }
+
+
+/* ren-dropdown-toggle-user  */
+.nav>.dropdown> .ren-dropdown-toggle-user {
+    padding:11px 8px;
+}
+ 
+
+span.ren-info-msg-bell-badge {
+position: absolute; top: 10px; left: 28px; height: 18px; min-width: 20px; padding: 0 3px; border-radius: 8px; background: #e62828; text-align: center; line-height: 17px; color: white; font-size: 11px; z-index:99
+}
