--- a/css/lyp.css
+++ b/css/lyp.css
@@ -34,7 +34,7 @@ box-sizing: border-box;
 }
 
 
-.panel {
+。user-signin-1 .panel {
     position:absolute;
     width:100%;
     /* background-color: #FFF; */
@@ -56,7 +56,14 @@ border-radius: 5px;
 box-sizing: border-box;
     */
 }
-
+a {
+    color: #379CE0;
+    text-decoration: none;
+}
+a:hover {
+    color: #379CE0;
+    text-decoration: none;
+}
 .lp-secondary {
 display: block;
 color: #3784d3;
@@ -82,4 +89,121 @@ hr {
 }
 #forgot-pwd-form p{
     font-size: 13px;
+}
+.section-header {
+font-size: 24px;
+font-weight: 200;
+line-height: 32px;
+}
+.martop30 {
+    margin-top:30px;
+}
+.marbottom20 {
+    margin-bottom:20px;
+}
+.martop100 {
+    margin-top:100px;
+}
+.marbottom100 {
+    margin-bottom:100px;
+}
+.section-1 {
+    font-size: 18px;
+}
+.marleft27 {
+    margin-left: 27px;
+}
+.martop5 {
+    margin-top: 5px;
+}
+.paddbottom50 {
+    padding-bottom: 50px;
+}
+.width170 {
+    width:170px;
+}
+.width70 {
+    width:70%;
+    margin:0px auto;
+}
+.marbottom50 {
+    margin-bottom: 50px;
+}
+.width140{
+    width:140px;
+}
+.boxSite {
+	position: relative;
+	overflow: hidden;
+}
+.clearLeft {
+clear: left;
+}
+section,figure {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	vertical-align: baseline;
+	outline: 0;
+	background: transparent;
+}
+.boxSite header {
+	position: absolute;
+	top: 0;
+	margin: 0;
+	padding: 0;
+	background: rgba(0,0,0,.3);
+	left: 0;
+	right: 0;
+	z-index: 2;
+	display:block;
+}
+
+.boxSite h2 {
+	margin: 0;
+	padding: 0;
+	color: #fff;
+	text-transform: uppercase;
+	padding: 5px 10px;
+	text-shadow: 1px 1px 0 #202020;
+	font: 1.3em/1.1em Arial,sans-serif;
+	text-rendering: optimizeLegibility;
+	vertical-align: baseline;
+	outline: 0;
+	background: transparent;
+}
+h2 {
+	display: block;
+	-webkit-margin-before: 0.83em;
+	-webkit-margin-after: 0.83em;
+	-webkit-margin-start: 0px;
+	-webkit-margin-end: 0px;
+}
+.container img {
+	vertical-align: middle;
+	text-align: center;
+}
+.boxSite div {
+	display: none;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 230px;
+	height: 155px;
+	background:rgba(255,255,255,0.4);
+/*  startcolorstr 其格式为 #AARRGGBB 。 AA 、 RR 、 GG 、 BB 为十六进制正整数。取值范围为 00 – FF 。 RR 指定红色值， GG 指定绿色值， BB 指定蓝色值，参阅 #RRGGBB 颜色单位。 AA 指定透明度。 00 是完全透明。 FF 是完全不透明。超出取值范围的值将被恢复为默认值。
+　　取值范围为 #FF000000 – #FFFFFFFF 。默认值为 #FF0000FF 。不透明蓝色。
+    */
+filter:progid:DXImageTransform.Microsoft.gradient(startcolorstr=#7F000000,endcolorstr=#7F000000);
+-webkit-box-shadow: 0 0 0 1px rgba(255,255,255,.6);
+
+	padding: 43px 10px 10px 10px;
+	z-index: 1;
+}
+.bottom-type {
+	font-size:13px;
+	text-align:center;
+	padding:10px 0px 30px 0px;
+	color: #777;
 }
