--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,10 @@ body {
 .pt10 {
     padding-top:10px;
 }
+.ptb5 {
+    padding-top:3px;
+    padding-bottom:3px;
+}
 
 div.mp0, p.mp0, h3.mp0 {
     margin: 0px;
