--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,12 @@ color:#A5ABB8;
 dt, dd {
 line-height: 1.7;
 }
+/* img gray */
+img.grayscale {
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
+    filter: gray; /* IE6-9 */
+    -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
+}
 /********************************************** navbar-static-top.css **************************************/
 .navbar-static-top {
     margin-bottom: 0px;
@@ -72,6 +78,10 @@ div.mp0, p.mp0, h3.mp0 {
 }
 .fz10 {
     font-size:10px;
+    font-weight:normal;
+}
+.fz16 {
+    font-size:16px;
     font-weight:normal;
 }
 /* CUSTOMIZE THE NAVBAR
