--- a/css/lyp.css
+++ b/css/lyp.css
@@ -296,3 +296,10 @@ white-space:nowrap;/* 不换行 */
 .already-add-group {
     font-size:14px;margin-left:15px;display:block;margin-top: 6px;
 }
+.old-user-reply {
+    border-left:1px solid #000;
+    padding-left:5px;
+}
+.new-reply-user-content {
+    margin-top:20px;
+}
