--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,10 @@ div.mp0, p.mp0, h3.mp0 {
     font-size:10px;
     font-weight:normal;
 }
+.fz12 {
+    font-size:12px;
+    font-weight:normal;
+}
 .fz16 {
     font-size:16px;
     font-weight:normal;
