--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,9 @@ body {
     padding-top:3px;
     padding-bottom:3px;
 }
+.pt3 {
+    padding-top:3px;
+}
 
 div.mt0, p.mt0, h3.mt0,hr.mt0 {
     margin-top: 0px;
