--- a/css/rener.css
+++ b/css/rener.css
@@ -25,3 +25,18 @@ overflow:hidden;
 vertical-align: middle;
 }
 
+/* 项目主页概述 */
+.article-options {
+margin: 0 -20px;
+padding: 0;
+list-style: none;
+}
+.article-options > li {
+	float: left;
+	width: 33.33333333333333%;
+	text-align: center;
+}
+.article-options > li + li .article-option { border-left: 1px solid #ddd; }
+.article-option b, .article-option span {
+	display: block;
+}
