--- a/css/rener.css
+++ b/css/rener.css
@@ -54,3 +54,28 @@ border-left: 1px solid #dfdfdf;
 div.dot {
 border-bottom:1px dotted #dfdfdf;
 }
+
+ 
+.bs-callout {
+  padding: 5px 10px;
+  margin:10px 0;
+border-left: 1px solid #aeaeae;
+border-left-width: 5px;
+border-radius: 3px;
+background-color:#efefef;
+}
+.bs-callout-primary {
+    border-left: 5px solid #428bca;
+}
+.bs-callout-success {
+    border-left: 5px solid #5cb85c;
+}
+.bs-callout-info {
+    border-left: 5px solid #5bc0de;
+}
+.bs-callout-warning {
+    border-left: 5px solid #f0ad4e;
+}
+.bs-callout-danger {
+    border-left: 5px solid #d9534f;
+}
