--- a/js/calendar/calendar.css
+++ b/js/calendar/calendar.css
@@ -322,6 +322,16 @@
   border-radius: 8px;
   border: 1px solid #ffffff;
 }
+/*.flag-event {
+   display: block;
+  background-image: url("../../img/Small-flag.png") ;width:10px; height:10px;
+  width: 10px;
+  height: 10px;
+  margin-right: 2px;
+  margin-bottom: 2px;
+  -webkit-box-shadow: inset 0px 0px 5px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: inset 0px 0px 5px 0px rgba(0, 0, 0, 0.4);
+}*/
 .event-block {
   display: block;
   background-color: #c3c3c3;
@@ -348,6 +358,12 @@
 }
 .event-special {
   background-color: #800080;
+}
+.event-noleader {
+     background-color: #dddddd;
+}
+.event-smallflag {
+   
 }
 .day-highlight:hover,
 .day-highlight {
@@ -376,6 +392,10 @@
 .day-highlight.dh-event-special:hover,
 .day-highlight.dh-event-special {
   background-color: #ffe6ff;
+}
+.day-highlight.dh-event-smallflag:hover,
+.day-highlight.dh-event-smallflag {
+  background-color: #eeef83;
 }
 .cal-row-head [class*="cal-cell"]:first-child,
 .cal-row-head [class*="cal-cell"] {
