--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@
     font-family: "Microsoft Yahei","Hiragino Sans GB","Helvetica Neue",Arial,sans-serif !important;
 }
 
+.dispalynone {
+    display:none;
+}
+
 .cursor {
     cursor:pointer;
 }
